@@ -4,7 +4,6 @@ import lombok.Getter;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Getter
 @AllArgsConstructor
@@ -14,7 +13,7 @@ public class DailyPlannerCompletionDataList {
     public static DailyPlannerCompletionDataList from(Map<String, Long> dailyCounts) {
         List<DailyPlannerCompletionData> dailyList = dailyCounts.entrySet().stream()
                 .map(entry -> DailyPlannerCompletionData.of(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+                .toList();
         return new DailyPlannerCompletionDataList(dailyList);
     }
 }
